# Launch-School

./: .gitignore  Practice.rb  README.txt
1_Basics/: 1_exercises.rb
Advent_of_Code/: 2.js  day_1_trebuchet.rb  file-operations.js  package-lock.json
Book_Exercises/: 4_Control.rb  9_Exercises.rb
Capstone/: package-lock.json  rbaskets_wireframe.excalidraw
Capstone/AI_week/day_0/dotenv_test/: my_app.py  pyproject.toml
Exercises/: 3_Methods.rb  5_Loops.rb
Exercises_Ruby_Basics/: exercises.rb  loops.rb
JS 210/: L4_exercises.js  L5_objects_exercises.js  L6_writing_better_code_problems.js  Lesson_3_Logic_and_Flow_Control.js  javascript_basics_exercises.js  package-lock.json  package.json  quiz_1.md  quizzes.md  study_guide.md  study_guide_code.js
JS 215/: L1 exercises.js
JS 220 Object Oriented JS/: L1_exercises.js  L2_exercises.js  L3_exercises.js  L4_exercises.js  L5_JS_Book_exercises.js  L5_exercises.js  LS 220 Readme.md  OO_tic_tac_toe.js  Small_Problems_Function_Context_Scope_Closures.js  Small_Problems_Object_Creation_Patterns.js  Small_Problems_Objects.js  package-lock.json  package.json  quizzes.md  quizzes_and_study_guide.md  study_guide_code.js
JS230/: DOM_shuffling_assignment.js  JS 230 Written Cheat Sheet.md  L1 exercises.html  L1_exercises.js  L2_exercises.js  L2_exercises_Asynch_Await.js  L2_exercises_Promises.js  L3_exercises.js  quizzes.html  quizzes.js  small1.html  small1_DOM_traversing_etc.js
LS 180/: Study_guide.md  quizzes.md
LS 202 HTML CSS/: FormLayoutPracticeWalkthrough.html  L3A4.html  L3A5.html  L4A3.html  L4A5 tables.html  my.css  (+7 more)
(+525 files in other folders)
